# bharata

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Final_project_report_mak575.docx  README.md  bharata.out
include/glad/: glad.h
src/: glad.c  main.cpp
src/ai/: ai.cpp  ai.h
src/assets/: CG_Assets.ai  grass.ai  grass_and_water.ai  grassland_tiles.ai  knight_selected.ai  player.ai  water.ai
src/cell/: cell.h
src/core/: game.cpp  game.h
src/grid/: grid.cpp  grid.h
src/main/: main.cpp
src/map/: map.cpp  map.h
src/shaders/: fShader.frag  fragment.frag  unitFShader.frag  unitVShader.vert  vShader.vert  vertex.vert
src/texture/: texture.cpp  texture.h
src/unit/: unit.cpp  unit.h
